Show unloc score (#199)
* Hook for showing user's score

* some small fixes

--- a/styles/profilePage/_stakerow.scss
+++ b/styles/profilePage/_stakerow.scss
@@ -78,6 +78,12 @@
       flex: 0 1 50px;
     }
 
+    &--id--flexi {
+      @extend #{ $self };
+      padding: 0 $mr-tn;
+      flex: 0 1 50px;
+    }
+
     &--duration {
       display: grid;
       padding: $mr-2rem $mr-sm 8px;
