feat: updated UI

--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -155,6 +155,9 @@
   }
   &--UNLOC {
     @include theme-aware("background-image", "icon-UNLOC");
+    &--violet {
+      @include theme-aware("background-image", "icon-UNLOC-violet");
+    }
   }
 }
 
