--- a/styles/_lightboxBase.scss
+++ b/styles/_lightboxBase.scss
@@ -32,7 +32,7 @@
     }
 
     @media (max-width: $bp-tablet) {
-      width: 100%;
+      //width: 100%;
       height: auto;
       padding: 40px 40px 30px;
       //overflow-y: auto;
