--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: contain;
 }
 
 .icon--interactive {
@@ -159,6 +160,10 @@
       @include theme-aware("background-image", "icon-UNLOC-violet");
     }
   }
+}
+
+.rise-reward {
+  background-image: url("/icons/rise-reward.svg");
 }
 
 .icon--fb {
