feat: updates on staking UI

--- a/styles/profilePage/_stakerow.scss
+++ b/styles/profilePage/_stakerow.scss
@@ -9,30 +9,33 @@
 
   @media (max-width: 1127px) {
     display: grid;
-    grid-template-columns: 2fr 6fr 9fr /*12fr*/ 3fr /*18fr*/;
-    //grid-template-rows: 120px 120px;
+    grid-template-columns: 2fr 6fr 9fr;
 
-    .apy {
-      grid-column-start: 2;
-      grid-column-end: 3;
+    & > *:nth-child(2) {
+      grid-column-start: 3;
+      grid-column-end: 4;
     }
 
     & > *:nth-child(3) {
       width: 100%;
-    }
-
-    & > *:nth-child(4) {
       grid-column-start: 1;
       grid-column-end: 3;
     }
 
-    & > *:nth-child(6) {
-      grid-column-start: 3;
-      grid-column-end: 6;
+    & > *:nth-child(4) {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 2;
     }
 
-    & > *:nth-child(4),
-    & > *:nth-child(6) {
+    & > *:nth-child(5) {
+      grid-column-start: 3;
+      grid-column-end: 5;
+    }
+
+    & > *:nth-child(3),
+    & > *:nth-child(5) {
       border-top: 1px solid;
       @include theme-aware("border-color", "profile-separator");
       grid-row-start: 2;
@@ -41,16 +44,13 @@
   }
 
   @media (max-width: 639px) {
-    & > *:nth-child(4),
-    & > *:nth-child(6) {
+    & > *:nth-child(3),
+    & > *:nth-child(5) {
       grid-column-start: 1;
       grid-column-end: 6;
     }
-    //& > *:nth-child(4) {
-    //  grid-column-start: 1;
-    //  grid-column-end: 6;
-    //}
-    & > *:nth-child(6) {
+
+    & > *:nth-child(5) {
       grid-row-start: 4;
       grid-row-end: 5;
     }
@@ -65,14 +65,8 @@
     @include theme-aware("border-color", "profile-separator");
   }
 
-  // Third element can grow
-  & > *:nth-child(3) {
-    //flex-grow: 1;
-  }
-
   // Last element of the row is a bit bigger
   & > *:last-child {
-    //flex: 0 1 460px;
     flex: 0 0 460px;
   }
 
@@ -119,9 +113,17 @@
     }
     &--amount {
       display: flex;
-      padding: 16px 28px;
+      padding: $mr-2rem $mr-md;
       justify-content: space-around;
-      flex-grow: 4;
+      flex: 4 0 290px;
+
+      @media (max-width: 1216px) {
+        padding: $mr-2rem;
+      }
+
+      @media (max-width: 639px) {
+        padding: $mr-2rem 0;
+      }
     }
   }
 
@@ -137,7 +139,7 @@
       display: flex;
       justify-content: center;
       &:not(:last-child) {
-        margin-bottom: 18px;
+        margin-bottom: $mr-2rem;
       }
     }
   }
@@ -166,19 +168,19 @@
     align-items: center;
 
     i {
-      margin-left: 12px;
+      margin-left: $mr-sm;
     }
   }
 
   &__id {
     grid-row: 2 / 2;
     @include theme-aware("color", "color-userLevel");
-    font-size: 24px;
+    font-size: $tp-2lg;
   }
 
   &__amount {
     display: flex;
-    font-size: 24px;
+    font-size: $tp-2lg;
     cursor: default;
 
     &.rise {
