--- a/styles/profilePage/_stakerow.scss
+++ b/styles/profilePage/_stakerow.scss
@@ -80,12 +80,28 @@
       @extend #{ $self };
       padding: $mr-2rem $mr-tn;
       flex: 0 1 50px;
-    }
 
-    &--id--flexi {
-      @extend #{ $self };
-      padding: 0 $mr-tn;
-      flex: 0 1 50px;
+      &--flexi {
+        @extend #{ $self };
+        padding: 0 $mr-tn;
+        flex: 0 1 50px;
+
+        @media (max-width: 1127px) {
+          & + *:nth-child(2) {
+            grid-column-start: 1;
+            grid-column-end: 4;
+            grid-row-start: 2;
+            grid-row-end: 3;
+          }
+
+          & ~ *:nth-child(3) {
+            grid-row-start: 1;
+            grid-row-end: 2;
+            grid-column-start: 3;
+            grid-column-end: 4;
+          }
+        }
+      }
     }
 
     &--duration {
