--- a/styles/main.scss
+++ b/styles/main.scss
@@ -44,6 +44,8 @@
 @import "./myOffers/myOffersTop";
 @import "./myOffers/myOffersWrap";
 
+@import "./voting/votingPage";
+@import "./voting/voteLightbox";
 @import "./profilePage/header";
 @import "./profilePage/page";
 @import "./profilePage/stakerow";
