--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -192,6 +192,11 @@ $themes: (
       linear-gradient(180deg, rgba(113, 73, 191, 0.145) 0%, rgba(66, 34, 128, 0.1) 100%),
     lightbox-loan-group-border-bottom: 1px solid #6743aa,
     offers-group-div: #6743aa,
+
+    voting-power-bg: rgba(66, 34, 128, 0.4),
+    voting-distribution-bg: #482688,
+    voting-color: #ffffff,
+    voting-separator: #9e6cfe,
   ),
   dark: (
     color-white: #fff,
@@ -384,6 +389,11 @@ $themes: (
       linear-gradient(180deg, rgba(113, 73, 191, 0.145) 0%, rgba(66, 34, 128, 0.1) 100%),
     lightbox-loan-group-border-bottom: 1px solid #6743aa,
     offers-group-div: #6743aa,
+
+    voting-power-bg: rgba(66, 34, 128, 0.4),
+    voting-distribution-bg: #482688,
+    voting-color: #ffffff,
+    voting-separator: #9e6cfe,
     disabled-input-text-color: rgba(147, 106, 224, 1),
   ),
 );
