Flexi stake row tailwind (#221)
* tailwind styling

* borders, preflight, reset

* some adjustments, mainly mobile

* action button hover state

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -219,3 +219,13 @@ a {
     opacity: 0.5;
   }
 }
+
+// Quick border reset, for tailwind.
+// This gives every element a default border style of solid.
+// Hopefully it doesn't break anything.
+*,
+::before,
+::after {
+  border-width: 0;
+  border-style: solid;
+}
