--- a/styles/profilePage/_header.scss
+++ b/styles/profilePage/_header.scss
@@ -99,6 +99,7 @@
       justify-content: center;
       align-items: center;
       //margin-top: $mr-sm;
+      width: 100%;
       background-color: transparent;
 
       .button--plus {
